<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoAppTeam</string>
    <string name="menu_principal">Menu Principal - DentConnect</string>
    <string name="buscar_clinicas">Busca tu Clinica Dental Cercana</string>
    <string name="calendario_visitas">Organiza tus citas</string>
    <string name="mi_perfil">Quien Soy</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="bienvenido_a_tu_comunidad">Bienvenido a Tu Comunidad</string>
    <string name="no_tienes_cuenta_registrate">No tienes una cuenta? Registrate</string>
    <string name="logo_app">icono_app</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="recordar_cuenta">Recordar cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="mispreferencias">Mis Preferencias</string>
    <string name="eventos">Mis Eventos</string>
    <string name="miperfil">Mi Perfil - Configuración Básica</string>
    <string name="mapas">Ver Mapa</string>
    <string name="olvide_mi_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="Registro">Se parte de la comunidad!</string>
    <string name="continuar_google">Continuar con Google</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_pass">Confirmar Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="nombrecompleto">Nombre Completo</string>
    <string name="icono_google">GOOGLE</string>
    <string name="icono_app">ICONO APP</string>
    <string name="volver">Regresar</string>
    <string name="recuperar_contraseña">Reestablece tu Contraseña</string>
    <string name="instruccion_recuperacion">Envia un enlace al correo con el que registraste tu cuenta</string>
    <string name="enviar_enlace">Enviar Enlace</string>
    <string name="Bienvenido">Bienvenido a VeciRed:
Conecta, colabora y transforma tu comunidad</string>
    <string name="seleccionarFecha">Selecciona Fecha</string>
    <string name="aceptarTerminos">Aceptar Terminos y Condiciones</string>
    <string name="Regitrarse">Registrarse</string>
    <string name="regresar">Regresar a Inicio</string>
    <string name="verTerminos">Ver Terminos y Condiciones</string>
    <string name="tomarfoto">Tomar Foto</string>
    <string name="registrarse">Registrarse</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="apellidos">Apellidos</string>
    <string name="publicar">Publicar</string>
    <string name="inicio">Bienvenido al Inicio, Enterate de lo que publica tu comunidad</string>
    <string name="Perfil">Seccion de Perfil - configuraciones principales</string>
    <string name="notificaciones">Seccion de Notificaciones</string>
    <string name="mensaje_equipo_desarrollo">El correo no se encuentra registrado. Por favor, comuníquese con el equipo de desarrollo de Vecired.</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="confirmar_contraseña">Confirma Contraseña</string>
    <string name="verificar">Verificar</string>
    <string name="nueva_contraseña">Nueva Contraseña</string>
    <string name="completa_campos">Completa todos los campos</string>
    <string name="claves_no_coinciden">Las contraseñas no coinciden</string>
    <string name="contrasena_actualizada">Contraseña actualizada correctamente</string>
    <string name="volverPrincipal">Regresar</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="codigo_recuperacion">Clave Temporal</string>
    <string name="comprobar_clave">Comprobar Clave</string>
    <string name="dni">DNI</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiar_foto">Cambiar Foto</string>
    <string name="modificar_fecha">Modificar Fecha de Nacimiento</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="titulo_consejos">Consejos que debes tener en cuenta</string>
    <string name="anuncio_urgente">Anuncio Urgente</string>
    <string name="agregar_fotos">Agregar Fotos</string>
    <string name="abrir_mapa">Abrir Mapa</string>
    <string name="ubicacion_seleccionada_hint">Ubicacion Seleccionada</string>
    <string name="mapa_icono_desc">Mapa</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="descripcion_hint">Agrega una Descripcion</string>
    <string name="reportes">Reportes</string>
    <string name="recomendacion">Recomendacion</string>
    <string name="categoria">Tipo de Publicacion</string>
    <string name="crear_publicacion">Crear Publicacion</string>
    <string name="fotos_hint">Toca para seleccionar hasta 4 imágenes</string>
    <string name="fotos_label">Seccion de Fotos</string>
    <string name="usuario_prueba">Prueba de usuario</string>
    <string name="user_id_placeholder">Cargando ID de usuario</string>
    <string name="cancelarpubli">Cancelar</string>
    <string name="title_activity_maps">Seleccionar Ubicación</string>
    <string name="seleccionar_ubicacion_text">Selecciona Sitio Cercano</string>
    <string name="noticias_comunidad">Noticias Sobre tu Comunidad</string>
    <string name="imagen_de_perfil">foto de usuario</string>
    <string name="comentar">Comentar</string>
    <string name="ver_fotos">Ver Fotos</string>
    <string name="ver_ubicacion">Ubicacion</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar1">Cancelar</string>
    <string name="escribecomentario">Escribe tu Comentario</string>
    <string name="enviar">Enviar</string>
    <string name="notificaciones_title">Centro de Notificaciones</string>

    <string name="time_minutes_ago">Hace %1$d minutos</string>
    <string name="time_hours_ago">Hace %1$d horas</string>
    <string name="time_days_ago">Hace %1$d días</string>
    <string name="time_months_ago">Hace %1$d meses</string>
    <string name="notificaciones_vacias_message">Notificaciones Vacias</string>
    <string name="time_now">Justo ahora</string>
    <string name="refresh_button_desc">Actualizar</string>
    <string name="detalle_publicacion_title">Detalle de la Publicacion</string>
    <string name="comentarios_title">Comentarios</string>
    <string name="interaccion">Ver Interacciones</string>
    <string name="icono_interaccion">interaccion</string>

    <!--  Tu API Key para Google Maps -->
    <string name="google_maps_key" translatable="false">AIzaSyBQYSEmMr8rD3OCOhpQtt8EyrfF1ZJVWyU</string>
    <string name="frgCfgLblPreferencias">Preferencias de Configuracion</string>
    <string name="frgCfgBtnAplicar">Aplicar</string>
    <string name="frgCfgBtnRestaurar">Restaurar</string>
    <string name="frgCfgLblConfiguracion">Configuracion</string>
    <string name="frgCfgTxtCorreo">Correo:</string>
    <string name="frgCfgBtnActualizar">Actualizar</string>
    <string name="frgCfgBtnCerrar">Cerrar Sesion</string>
    <string name="frgCfgLblIdioma">Idioma de la aplicacion</string>
    <string name="frgCfgLblTemaOscuro">Tema de la aplicación</string>
    <string name="frgCfgLblTamanoFuente">Tamaño de la fuente</string>
    <string name="bienvenida">Bienvenido a tu Comunidad</string>
    <string name="correoelectronico">Correo Electronico</string>
    <string name="clave">Contraseña</string>
    <string name="cuenta">Recordar cuenta</string>
    <string name="ingresa">Iniciar Sesion</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="clave_olvidada">Olvide mi contraseña</string>
    <string name="nuevo_registro">No tienes cuenta? Registrate</string>
    <string name="noticias">Noticias sobre tu Comunidad</string>

    <string-array name="idiomas_opciones">
        <item>es</item> <item>en</item> </string-array>

    <string-array name="temas_opciones">
        <item>Sistema</item>
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>

    <string-array name="tamanos_fuente_opciones">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>

</resources>