<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="?attr/colorSurface">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribecomentario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_comentario_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:maxLines="6"
        android:gravity="top|start"
        android:padding="8dp"
        android:background="@drawable/rounded_border"
        android:textColor="?android:textColorPrimary"
        android:hint="Tu opinión sobre la publicación..."
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_comentario_cancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar1" />

        <Button
            android:id="@+id/btn_comentario_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/aceptar"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>
